--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.153.0"
+    "three": "^0.153.0",
+    "tween.js": "^16.6.0"
   },
   "devDependencies": {
     "vite": "^4.3.9"
